k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: masterannonce
  labels:
    app: masterannonce
spec:
  type: NodePort
  selector:
    app: masterannonce
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
